# cgir

./: Cargo.toml  LICENSE  README.md
src/: board.rs  board_widget.rs  chess_utils.rs  main.rs  uci.rs
