[package]
name = "cgir"
version = "0.1.0"
authors = ["wspeirs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.1.1"
druid = {version="0.7.0", features=["svg", "im"]}
# itertools = "0.10"
log = "0.4"
vampirc-uci = {version="0.11.0", features=["chess"]}

